[h1]v11.6[/h1]
-The test is over. Transportation and Electricity are local goods again.
-Reworked Radio production.
-Added new production method for Furniture Manufactories: Home Appliances. PM is unlocked by researching Dough Rollers (previously almost useless tech).
-Reworked Munition Plants, now able to produce ammunition without explosives or lead.
-Added +5% throughput to Chainsaws PM.
-Slightly increased both mortality and birth rate to increase workforce %tage change speed.
-IGs that lost in a revolution now get an influence debuff for 20 years, instead of 10.
-Secessions of the same culture now have a cooldown of 10 years, instead of 5.
-Revolutions now get less states if support is not very high.
-Demobilization/Remobilization cooldown reduced from 90 to 30 days.


[h1]v11.5[/h1]
-Added "Densely Forested Area" to Indochina.
-Fixed Power Blocs railway PMs were not available.
-Reduced goods shortage penalty threshold (shortages will be easier to handle)

[h1]v11.4[/h1]
-Transportation is now a non-local good (does anyone like microing railroad PMs so they don't drain your budget?)
-Fixed auto expansion in states with insufficient infrastructure.
-Reverted base MAPI to 75%. It being 90% was not intentional.
-USA, UK, Belgium, Prussia and France start with Mechanical Production tech researched.
-Added starting Luxury Clothes Factories to UK. No starting employment, needs some time to hire.
-Chainsaws PM now consumes Fuel instead of Oil and gives a little Wood output bonus.
-IEX doesn't apply "Difficult Terrain" state traits if VTM is active. VTM should be loaded after IEX.
-Removed +10% construction efficiency from Road Maintainance decree.
[b]Innovation Tweaks:[/b]
    -Base weekly innovation cap reduced 75 >> 60 (50 in vanilla)
	-Base weekly innovation increased 50 >> 60
	-Literacy scaled weekly innovation cap increased 150 >> 180
	-Literacy scaled weekly tech spread increased 75 >> 90


[h1]v11.3[/h1]