@@ -1,5 +1,5 @@
 {
-  "name" : "(1.7) Industry Expanded v11.5",
+  "name" : "(1.7) Industry Expanded v11.6",
   "picture" : "thumbnail.png",
   "id" : "",
   "version" : "11.5",
