@@ -10,12 +10,20 @@ NCountry = {
 }
 
 NEconomy = {
-	TRADE_ROUTE_AUTO_INCREASE_ACCEPTABLE_REVENUE_DIFFERENCE = 1.05 # Multiply revenue of new trade route level by this for the purpose of considering whether it's OK to auto-increase level (means that trade routes can level up even when slightly decreasing overall revenue)
+	TRADE_ROUTE_AUTO_INCREASE_ACCEPTABLE_REVENUE_DIFFERENCE = 1 # Multiply revenue of new trade route level by this for the purpose of considering whether it's OK to auto-increase level (means that trade routes can level up even when slightly decreasing overall revenue)
 	TRADE_ROUTE_AUTO_REDUCTION_ACCEPTABLE_REVENUE_DIFFERENCE = 1.2 # Multiply revenue of current trade route level by this for the purpose of considering whether we should auto-decrease level (means that trade routes won't level down just for the purpose of a small revenue increase)
 	TRADE_ROUTE_BUREAUCRACY_COST = 10	# 20					# The cost in BUR per trade route
 	TRADE_ROUTE_MIN_TOTAL_IMPORTS = 1	# 5					# This amount of a good can always be imported to a market even if there is no demand
 	TRADE_ROUTE_AUTO_INCREASE_EMPLOYMENT_THRESHOLD = 0.75	# 0.9 	# If trade route has this much of its max staffing level employed, it can automatically increase its level
-	TRADE_ROUTE_AUTO_REDUCTION_EMPLOYMENT_THRESHOLD = 0.6	# 0.75 	# If trade route has less than this of its max staffing level employed and could not hire anyone last week, it can automatically decrease its level
+	TRADE_ROUTE_AUTO_REDUCTION_EMPLOYMENT_THRESHOLD = 0.4	# 0.75 	# If trade route has less than this of its max staffing level employed and could not hire anyone last week, it can automatically decrease its level
+	GOODS_DEFAULT_CONVOY_COST_MULTIPLIER = 0.6
+	TRADE_ROUTE_MAX_LEVEL = 500
+	TRADE_ROUTE_MIN_TOTAL_IMPORTS = 1
+	TRADE_ROUTE_ECONOMY_OF_SCALE = 0.05					# Each level of trade route after the first adds this % to desired trade quantity
+	TRADE_ROUTE_ECONOMY_OF_SCALE_MAX_LEVEL = 241			# After this level, trade route economy of scale no longer increases the amount per level
+	TRADE_ROUTE_AUTO_INCREASE_LOW_PRODUCTIVITY_THRESHOLD = 3 # If trade route's productivity would drop below this, don't automatically increase its level (regardless of total revenue)
+	TRADE_ROUTE_AUTO_INCREASE_HIGH_PRODUCTIVITY_THRESHOLD = 4 # If trade route's productivity is above this, it's always fine to automatically increase its level (regardless of total revenue)
+	TRADE_CENTER_NUM_LEVELS_PER_TRADE_ROUTE_LEVEL = 0.5 # Each level of a trade route generates this number of Trade Center levels to manage it
 	
 	PRICE_RANGE = 0.95
 	GOODS_SHORTAGE_PENALTY_THRESHOLD = 0.6
@@ -23,6 +31,8 @@ NEconomy = {
 	GOODS_SHORTAGE_PENALTY_MIN = 0.01			# Goods shortage penalty can't be lower than this if there is any shortage
 	
 	ECONOMY_OF_SCALE_NATIONALIZED_FRACTION_MULT = 0	# Non-government building economy of scale modifier if multiplied by (1 - the fraction of nationalized levels * this)
+
+
 }
 
 NMilitary = {
