@@ -1,4 +1,26 @@
 ﻿
+transportation = {
+	texture = "gfx/interface/icons/goods_icons/transportation.dds"
+	cost = 30
+	category = staple
+	#local = yes
+
+	prestige_factor = 4
+	
+	consumption_tax_cost = 200
+}
+
+electricity = {
+	texture = "gfx/interface/icons/goods_icons/electricity.dds"
+	cost = 30
+	category = staple
+	#local = yes
+	
+	prestige_factor = 5
+	
+	consumption_tax_cost = 200
+}
+
 #machine_parts = {
 #	texture = "gfx/interface/icons/goods_icons/machine_parts.dds"
 #	cost = 50
