@@ -162,3 +162,31 @@ popneed_luxury_drinks = {
 		min_supply_share = 0.0
 	}
 }
+
+popneed_communication = {
+	default = transportation
+	
+	entry = {
+		goods = services
+		
+		weight = 0.5
+		max_supply_share = 0.75
+		min_supply_share = 0.0
+	}
+	
+	entry = {
+		goods = transportation
+		
+		weight = 1
+		max_supply_share = 0.75
+		min_supply_share = 0.0
+	}
+	
+	entry = {
+		goods = telephones
+		
+		weight = 2
+		max_supply_share = 1.0
+		min_supply_share = 0.0
+	}
+}
