@@ -552,10 +552,10 @@
  law_state_funded_secondary_education:0 "Всеобщее специальное образование"
  law_state_funded_secondary_education_desc:0 "Колледжи и университеты открыты для всех, кто хочет учиться."
  lawgroup_secondary_education:0 "Специальное образование"
- modifier_country_institution_schools_2_max_investment_add:0 "к максимальным вложениям в [Concept('concept_institution', 'институт')] «$institution_schools_2$»"
- modifier_country_institution_schools_2_max_investment_add_desc:0 "Бонус или штраф к максимальному уровню [Concept('concept_institution', 'института')] «$institution_schools_2$»."
- modifier_building_luxury_clothes_factories_throughput_add:0 "[Concept('concept_throughput', 'Товарооборот')] заводов роскошной одежды"
- modifier_building_luxury_clothes_factories_throughput_add_desc:0 "Бонус или штраф к потреблению и производству заводов роскошной одежды."
+ country_institution_schools_2_max_investment_add:0 "к максимальным вложениям в [Concept('concept_institution', 'институт')] «$institution_schools_2$»"
+ country_institution_schools_2_max_investment_add_desc:0 "Бонус или штраф к максимальному уровню [Concept('concept_institution', 'института')] «$institution_schools_2$»."
+ building_luxury_clothes_factories_throughput_add:0 "[Concept('concept_throughput', 'Товарооборот')] заводов роскошной одежды"
+ building_luxury_clothes_factories_throughput_add_desc:0 "Бонус или штраф к потреблению и производству заводов роскошной одежды."
  
  # v11.2 LITE
  iron:0 "Металлы"
