@@ -1,14 +1,24 @@
 [h1]v11.6[/h1]
--The test is over. Transportation and Electricity are local goods again.
+[h2]Production[/h2]
 -Reworked Radio production.
 -Added new production method for Furniture Manufactories: Home Appliances. PM is unlocked by researching Dough Rollers (previously almost useless tech).
 -Reworked Munition Plants, now able to produce ammunition without explosives or lead.
 -Added +5% throughput to Chainsaws PM.
+[h2]Trade[/h2]
+-Decreased trade route convoy usage by 40%.
+-Trade route max level increased.
+-Slightly increased Industrial Port convoy production (175 > 180)
+-Increased Modern Port convoy production (200 > 240)
+-Other improvements to trade routes.
+[h2]Country & Revolutions[/h2]
+-Increased max innovation investment cap from literacy (180 > 200)
 -Slightly increased both mortality and birth rate to increase workforce %tage change speed.
 -IGs that lost in a revolution now get an influence debuff for 20 years, instead of 10.
 -Secessions of the same culture now have a cooldown of 10 years, instead of 5.
--Revolutions now get less states if support is not very high.
+-Revolutions now get less states with low support.
 -Demobilization/Remobilization cooldown reduced from 90 to 30 days.
+[h2]Other[/h2]
+-Fixed Iron Mines auto-expansion.
 
 
 [h1]v11.5[/h1]
